Ainda falta corrigir umas coisas no invoice

--- a/app/assets/stylesheets/invoice.css.scss
+++ b/app/assets/stylesheets/invoice.css.scss
@@ -34,7 +34,7 @@ h6{font-size:1.4em;}
 
 body{background-color:#eee!important;font-family:Arial, Helvetica, sans-serif;color:#515151;font-size:14px;}
 #wrap{width:998px;margin:0 auto;padding:50px 0;}
-#wrap_top{border: 1px solid #ccc;background: white;box-shadow: 0px 0px 20px #aaa;width:100%;float:left;}
+#wrap_top{background: white;box-shadow: 0px 0px 20px #aaa;width:100%;float:left;}
 #wrap_mid{width:100%;float:left;}
 #wrap_bottom{width:960px;margin:19px 0;padding:0 21px 0 17px;display:inline;float:left;}
 
