--- a/app/assets/stylesheets/invoice.css.scss
+++ b/app/assets/stylesheets/invoice.css.scss
@@ -3,7 +3,7 @@
 /*  RESET FILE ----------------------- */
 
 * {outline:none;}
-body{margin:0;padding:0;font-size:12px;height:100%;}
+body.invoice{margin:0;padding:0;font-size:12px;height:100%;}
 a:link, a:visited, a:hover, a:active{text-decoration:none;}
 ul, ol{margin:0;padding:0;list-style-type:none;}
 form{margin:0px;padding:0px;}
@@ -32,7 +32,7 @@ h6{font-size:1.4em;}
 
 /* LAYOUT TAGS ----------------------- */
 
-body{background-color:#eee!important;font-family:Arial, Helvetica, sans-serif;color:#515151;font-size:14px;}
+body.invoice{background-color:#eee!important;font-family:Arial, Helvetica, sans-serif;color:#515151;font-size:14px;}
 #wrap{width:998px;margin:0 auto;padding:50px 0;}
 #wrap_top{background: white;box-shadow: 0px 0px 20px #aaa;width:100%;float:left;}
 #wrap_mid{width:100%;float:left;}
