--- a/app/views/ordems/versao_cliente.html.erb
+++ b/app/views/ordems/versao_cliente.html.erb
@@ -7,7 +7,7 @@
 <%= stylesheet_link_tag "application", :media => "all" %>
 </head>
 
-<body>
+<body class="invoice">
 <!-- start wrap -->
 <div id="wrap">
 	<!-- start wrap_mid -->
