--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -5,9 +5,13 @@
   <div class="form-inputs new_client_form">
 	<div class="row">
 		<div class="span3" >
-			<%= f.input :name, :label => "Nome" %>
+			<%= f.input :name, :label => "Cliente" %>
 			<%= f.input :contato %>
 			<%= f.input :rg %>
+			<%= f.input :cpf %>
+			<%= f.input :cnpj %>
+			<%= f.input :razao_social %>
+			<%= f.input :status %>
 			<%= f.input :nascimento %>
 		</div>
 		<div class="span3" >
