--- a/app/views/clientes/_form_ordem.html.erb
+++ b/app/views/clientes/_form_ordem.html.erb
@@ -8,6 +8,10 @@
 			<%= f.input :name, :label => "Nome" %>
 			<%= f.input :contato %>
 			<%= f.input :rg %>
+			<%= f.input :cpf %>
+			<%= f.input :cnpj %>
+			<%= f.input :razao_social %>
+			<%= f.input :status %>
 			<%= f.input :nascimento %>
 		</div>
 		<div class="span3" >
