--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -10,6 +10,7 @@
     <%= yield(:head) %>
   </head>
   <body>
+	TEST
     <header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
         <div class="container">
