--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -15,7 +15,7 @@
 			<%= f.input :nascimento %>
 		</div>
 		<div class="span3" >
-			<%= f.input :telefone %>
+			<%= f.input :telefone, :label => "Telefone fixo" %>
 			<%= f.input :celular %>
 			<%= f.input :celular2 %>
 		</div>
