--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -24,7 +24,7 @@
 		</div>
 		<div class="span3">
 			<p>
-			  <b>Telefone:</b>
+			  <b>Telefone Fixo:</b>
 			  <%= @cliente.telefone %>
 			</p>
 
