--- a/app/views/ordems/index.html.erb
+++ b/app/views/ordems/index.html.erb
@@ -3,9 +3,10 @@
 	<table  class="table table-striped">
 	  <thead>
 		  <tr>
+		  	<th width='100px'>OS</th>
 			<th width='100px'>Cliente</th>
-			<th width='100px'>Usuário</th>
 			<th width='100px'>Criacao</th>
+			<th width='100px'>Forma de Pagamento</th>
 			<th width='100px'>Status</th>
 			<th></th>
 			<th></th>
@@ -15,9 +16,10 @@
 	  <tbody>
 		<% @ordems.each do |ordem| %>
 		  <tr>
+		  	<td align='center'><%= ordem.id %></td>
 			<td align='center'><%= ordem.cliente.name %></td>
-			<td align='center'><%= ordem.user.name %></td>
 			<td align='center'><%= ordem.created_at %></td>
+			<td align='center'><%= ordem.pagamento %></td>
 			<td align='center'><%= ordem.status %></td>
 			<td width='50px'><%= link_to 'Mostrar', ordem %></td>
 			<td width='50px'><%= link_to 'Editar', edit_ordem_path(ordem) %></td>
