--- a/app/views/ordems/show.html.erb
+++ b/app/views/ordems/show.html.erb
@@ -4,7 +4,7 @@
 		<div class="right order_menu">
 			OS:
 			<%= @ordem.id %>
-			<%= link_to 'Alterar Ordem', edit_ordem_path(@ordem), class: 'btn btn-primary alterar' %>
+			<%# link_to 'Alterar Ordem', edit_ordem_path(@ordem), class: 'btn btn-primary alterar' %>
 			<%= link_to raw("<i class='icon-print'></i>"), {:controller => "ordems", :action => "versao_cliente", :id => @ordem.id}, {:target=> "_blank", :class=>"btn"}%>
 		</div>
 	</h2>
@@ -76,7 +76,7 @@
 		<div class="row">
 			<div class="span3" >
 				<%= f.association :produto, prompt: "Escolha o produto", :label => "Produto:", input_html: { class: 'ordem_input' }  %>
-				<%= f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o papel", :label => "Papel:", input_html: { class: 'ordem_input' } %>
+				<%= f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o tipo", :label => "Matéria Prima:", input_html: { class: 'ordem_input' } %>
 			</div>
 			<div class="span3" >
 				<%= f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina", :label => "Máquina:", input_html: { class: 'ordem_input' } %>
