--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,20 @@
-<h2>Criar Usuário</h2>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :required => true %>
-  <%= f.input :password_confirmation, :required => true %>
-	<%= f.input :admin, as: :boolean, :required => true, :label => false %>
-	<%= f.label :admin %>
-  <%= f.button :submit, 'Criar Usuário', :class => 'btn-primary' %>
-<% end %>
-<%= render "devise/shared/links" %>
+<div class="inner_content">
+  <h2>Criar Usuário</h2>
+  <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
+    <%= f.error_notification %>
+    <%= display_base_errors resource %>
+    <%= f.input :name, :autofocus => true, :label=>"Nome Completo" %>
+    <%= f.input :email, :required => true %>
+    <%= f.input :password, :required => true %>
+    <%= f.input :password_confirmation, :required => true %>
 
-<!--<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
--->
+    <div class="admin_check">
+      <%= f.input :admin, as: :boolean, :required => true, :label => false %>
+      <%= f.label :admin %>
+    </div>
+    <div class="clear"></div>
+    <br/>
+    <%= f.button :submit, 'Criar Usuário', :class => 'btn-primary' %>
+  <% end %>
+  <!--<%= render "devise/shared/links" %>-->
+</div>
