Coloquei o total num lugar mais razoavel

--- a/app/assets/stylesheets/ordems.css.scss
+++ b/app/assets/stylesheets/ordems.css.scss
@@ -16,3 +16,6 @@
 	}
 
 .order_menu .alterar {font-weight:normal;padding: 5px 15px; margin-left: 20px;}
+
+.total_value {font-weight: bold; text-align: right!important;}
+.total_value_number {font-weight: bold;}
