Formatação de datas

--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -7,10 +7,10 @@
 		<div class="span3" >
 			<%= f.input :name, :label => "Cliente" %>
 			<%= f.input :contato %>
-			<%= f.input :rg %>
-			<%= f.input :cpf %>
-			<%= f.input :cnpj %>
-			<%= f.input :razao_social %>
+			<%= f.input :rg, :label =>"RG" %>
+			<%= f.input :cpf, :label =>"CPF" %>
+			<%= f.input :cnpj, :label =>"CNPJ" %>
+			<%= f.input :razao_social, :label =>"Razão social" %>
 			<%= f.input :status %>
 			<%= f.input :nascimento %>
 		</div>
