--- a/app/views/ordems/show.html.erb
+++ b/app/views/ordems/show.html.erb
@@ -23,7 +23,7 @@
 
 		<div class="span2" >
 		  <b>Data:</b>
-		  <%= @ordem.created_at %>
+		  <%= @ordem.created_at.strftime("%d %b %Y") %>
 		</div>
 
 		<div class="span2" >
